Changed inset to width and height on .bg-img and .bg-img::after to try to fix an issue on mobile.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -22,7 +22,8 @@ body {
     background-size: cover;
     background-position: bottom;
     position: absolute;
-    inset: 0;
+    width: 100%;
+    min-height: 100vh;
     z-index: -1;
     display: none;
 }
@@ -34,7 +35,8 @@ body {
 .bg-img::after {
     content: '';
     position: absolute;
-    inset: 0;
+    width: 100%;
+    min-height: 100vh;
     background-color: hsla(0, 0%, 0%, 0.4);
 }
 
